--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
 
     <dependencies>
 
+        <!-- PDF -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>1.8.10</version>
+        </dependency>
+
+
         <!-- Utils -->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -21,6 +29,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
 
 
 
