--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,19 @@
     <dependencies>
 
         <!-- PDF -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.pdfbox</groupId>-->
+            <!--<artifactId>pdfbox</artifactId>-->
+            <!--<version>2.0.0-RC3</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>1.8.10</version>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.8</version>
         </dependency>
+
+
+
 
 
         <!-- Utils -->
